feat: api m_simpanan (without validation)
